--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -94,6 +94,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/default_space"
                     android:text="@string/display_name"
+                    android:textColor="@color/black"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
 
                 <EditText
@@ -124,6 +125,7 @@
                     android:layout_marginTop="@dimen/default_space"
                     android:layout_marginEnd="@dimen/space_4"
                     android:text="@string/pan_number"
+                    android:textColor="@color/black"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     android:visibility='@{TextUtils.isEmpty(vm.guardian)?View.VISIBLE:View.GONE}' />
 
@@ -155,6 +157,7 @@
                     android:layout_marginTop="@dimen/default_space"
                     android:layout_marginEnd="@dimen/space_4"
                     android:text="@string/pan_name"
+                    android:textColor="@color/black"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     android:visibility='@{TextUtils.isEmpty(vm.guardian)?View.VISIBLE:View.GONE}' />
 
@@ -185,6 +188,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/default_space"
                     android:text="@string/email_id"
+                    android:textColor="@color/black"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
 
                 <EditText
@@ -213,6 +217,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/default_space"
                     android:text="@string/mobile_number"
+                    android:textColor="@color/black"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
 
                 <EditText
@@ -242,6 +247,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/default_space"
                     android:text="@string/name_of_guardian"
+                    android:textColor="@color/black"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     android:visibility='@{TextUtils.isEmpty(vm.guardian)?View.GONE:View.VISIBLE}' />
 
@@ -271,6 +277,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/default_space"
                     android:text="@string/guardian_pan"
+                    android:textColor="@color/black"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     android:visibility='@{TextUtils.isEmpty(vm.guardianPANNumber)?View.GONE:View.VISIBLE}' />
 
@@ -296,6 +303,222 @@
 
             </LinearLayout>
 
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/space_16"
+                android:layout_marginTop="@dimen/space_16"
+                android:layout_marginEnd="@dimen/space_16"
+                android:background="@drawable/shape_cart_view"
+                android:elevation="@dimen/space_2"
+                android:orientation="vertical"
+                android:padding="@dimen/space_16">
+
+                <TextView
+                    android:id="@+id/tvAddressTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/lato_semibold"
+                    android:text="@string/tarrakki_correspondence_address"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                    android:textColor="@color/black"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/tvAddressL"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/default_space"
+                    android:text="@string/address"
+                    android:textColor="@color/black"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tvAddressTitle" />
+
+                <EditText
+                    android:id="@+id/edtAddress"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/space_4"
+                    android:background="@{vm.isEdit?@drawable/shape_edt_gray_round:@drawable/shape_edt_disable_gray_round}"
+                    android:enabled="@{vm.isEdit()}"
+                    android:hint="@string/pls_entr_ur_adrs"
+                    android:inputType="textMultiLine"
+                    android:maxLines="5"
+                    android:paddingStart="@dimen/default_space"
+                    android:paddingTop="@dimen/space_8"
+                    android:paddingEnd="@dimen/default_space"
+                    android:paddingBottom="@dimen/space_8"
+                    android:text="@={vm.address}"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/darker_gray"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tvAddressL"
+                    tools:background="@drawable/shape_edt_disable_gray_round" />
+
+                <TextView
+                    android:id="@+id/tvCityL"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/default_space"
+                    android:layout_marginEnd="@dimen/_4sdp"
+                    android:text="@string/city"
+                    android:textColor="@color/black"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    app:layout_constraintEnd_toStartOf="@id/tvPincodeL"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/edtAddress" />
+
+                <EditText
+                    android:id="@+id/edtCity"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/space_4"
+                    android:background="@{vm.isEdit?@drawable/shape_edt_gray_round:@drawable/shape_edt_disable_gray_round}"
+                    android:enabled="@{vm.isEdit()}"
+                    android:hint="@string/pls_enter_your_city"
+                    android:inputType="textCapSentences"
+                    android:maxLines="1"
+                    android:paddingStart="@dimen/default_space"
+                    android:paddingTop="@dimen/space_8"
+                    android:paddingEnd="@dimen/default_space"
+                    android:paddingBottom="@dimen/space_8"
+                    android:text="@={vm.city}"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/darker_gray"
+                    app:layout_constraintEnd_toEndOf="@id/tvCityL"
+                    app:layout_constraintStart_toStartOf="@+id/tvCityL"
+                    app:layout_constraintTop_toBottomOf="@id/tvCityL"
+                    tools:background="@drawable/shape_edt_disable_gray_round" />
+
+                <TextView
+                    android:id="@+id/tvPincodeL"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_4sdp"
+                    android:layout_marginTop="@dimen/default_space"
+                    android:text="@string/pincode"
+                    android:textColor="@color/black"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/tvCityL"
+                    app:layout_constraintTop_toBottomOf="@id/edtAddress" />
+
+                <EditText
+                    android:id="@+id/edtPincode"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/space_4"
+                    android:background="@{vm.isEdit?@drawable/shape_edt_gray_round:@drawable/shape_edt_disable_gray_round}"
+                    android:enabled="@{vm.isEdit()}"
+                    android:hint="@string/please_enter_your_pincode"
+                    android:inputType="number"
+                    android:maxLines="1"
+                    android:paddingStart="@dimen/default_space"
+                    android:paddingTop="@dimen/space_8"
+                    android:paddingEnd="@dimen/default_space"
+                    android:paddingBottom="@dimen/space_8"
+                    android:text="@={vm.pincode}"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/darker_gray"
+                    app:layout_constraintEnd_toEndOf="@id/tvPincodeL"
+                    app:layout_constraintStart_toStartOf="@id/tvPincodeL"
+                    app:layout_constraintTop_toBottomOf="@id/tvPincodeL"
+                    tools:background="@drawable/shape_edt_disable_gray_round" />
+
+                <TextView
+                    android:id="@+id/tvStateL"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/default_space"
+                    android:layout_marginEnd="@dimen/_4sdp"
+                    android:text="@string/state"
+                    android:textColor="@color/black"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    app:layout_constraintEnd_toStartOf="@id/tvCountryL"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/edtCity" />
+
+                <EditText
+                    android:id="@+id/edtState"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/space_4"
+                    android:background="@{vm.isEdit?@drawable/shape_edt_gray_round:@drawable/shape_edt_disable_gray_round}"
+                    android:enabled="@{vm.isEdit()}"
+                    android:hint="@string/please_enter_your_state"
+                    android:inputType="textCapSentences"
+                    android:maxLines="1"
+                    android:paddingStart="@dimen/default_space"
+                    android:paddingTop="@dimen/space_8"
+                    android:paddingEnd="@dimen/default_space"
+                    android:paddingBottom="@dimen/space_8"
+                    android:text="@={vm.state}"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/darker_gray"
+                    app:layout_constraintEnd_toEndOf="@id/tvStateL"
+                    app:layout_constraintStart_toStartOf="@+id/tvStateL"
+                    app:layout_constraintTop_toBottomOf="@id/tvStateL"
+                    tools:background="@drawable/shape_edt_disable_gray_round" />
+
+                <TextView
+                    android:id="@+id/tvCountryL"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_4sdp"
+                    android:layout_marginTop="@dimen/default_space"
+                    android:text="@string/country"
+                    android:textColor="@color/black"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/tvStateL"
+                    app:layout_constraintTop_toBottomOf="@id/edtPincode" />
+
+                <TextView
+                    android:id="@+id/edtCountry"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_marginTop="@dimen/space_4"
+                    android:background="@{vm.isEdit?@drawable/shape_edt_gray_round:@drawable/shape_edt_disable_gray_round}"
+                    android:drawableEnd="@drawable/ic_drop_down_dark_gray_24dp"
+                    android:enabled="@{vm.isEdit()}"
+                    android:hint="@string/please_select_your_country"
+                    android:maxLines="1"
+                    android:paddingStart="@dimen/default_space"
+                    android:paddingTop="@dimen/space_8"
+                    android:paddingEnd="@dimen/default_space"
+                    android:paddingBottom="@dimen/space_8"
+                    android:singleLine="true"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/darker_gray"
+                    app:layout_constraintBottom_toBottomOf="@+id/edtState"
+                    app:layout_constraintEnd_toEndOf="@id/tvCountryL"
+                    app:layout_constraintStart_toStartOf="@id/tvCountryL"
+                    app:layout_constraintTop_toBottomOf="@id/tvCountryL"
+                    tools:background="@drawable/shape_edt_disable_gray_round" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/default_space"
+                    android:layout_marginBottom="@dimen/space_8"
+                    android:text="@string/disclaimer_this_address_details"
+                    android:textColor="@color/disclaimer_color"
+                    android:textSize="@dimen/sp9"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/edtState" />
+
+
+            </android.support.constraint.ConstraintLayout>
+
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -320,6 +543,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/default_space"
                     android:text="@string/nominee_name"
+                    android:textColor="@color/black"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
 
                 <EditText
@@ -347,6 +571,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/default_space"
                     android:text="@string/nominee_relationship"
+                    android:textColor="@color/black"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
 
                 <EditText
