1 Create new Dialog for Updating email and mobile field in profile. 2 Implemented new design of address in profile. 3 Working on design of Tarrakki Zyaada screen.

--- a/app/src/main/res/layout/fragment_add_bank_account.xml
+++ b/app/src/main/res/layout/fragment_add_bank_account.xml
@@ -230,7 +230,7 @@
                 android:layout_marginTop="@dimen/space_4"
                 android:background="@drawable/shape_edt_gray_round"
                 android:hint="@string/enter_ifsc_code"
-                android:inputType="textCapCharacters"
+                android:inputType="text"
                 android:maxLength="11"
                 android:maxLines="1"
                 android:paddingStart="@dimen/default_space"
@@ -241,7 +241,6 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textColor="@color/black"
                 android:textColorHint="@color/darker_gray"
-                app:isIFSCCode="@{true}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_weight="1"
                 app:layout_constraintStart_toEndOf="@id/tvAccountType"
