--- a/app/src/main/res/layout/activity_social_sign_up.xml
+++ b/app/src/main/res/layout/activity_social_sign_up.xml
@@ -34,7 +34,7 @@
                 android:id="@+id/tvLoginLbl"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/space_32"
+                android:layout_marginTop="@dimen/default_space"
                 android:fontFamily="@font/lato_bold"
                 android:text="@string/sign_up_start_investing"
                 android:textColor="@color/white"
@@ -43,11 +43,34 @@
                 app:layout_constraintTop_toBottomOf="@id/ivLogin" />
 
             <EditText
+                android:id="@+id/edtEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/space_32"
+                android:layout_marginTop="@dimen/default_space"
+                android:layout_marginEnd="@dimen/space_32"
+                android:background="@drawable/shape_edt_white_round"
+                android:hint="@string/email_address_star"
+                android:inputType="textEmailAddress"
+                android:maxLines="1"
+                android:paddingStart="@dimen/default_space"
+                android:paddingTop="@dimen/space_8"
+                android:paddingEnd="@dimen/default_space"
+                android:paddingBottom="@dimen/space_8"
+                android:text="@={vm.email}"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvLoginLbl" />
+
+
+            <EditText
                 android:id="@+id/edtMobile"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/space_32"
-                android:layout_marginTop="@dimen/space_32"
+                android:layout_marginTop="@dimen/default_space"
                 android:layout_marginEnd="@dimen/space_32"
                 android:background="@drawable/shape_edt_white_round"
                 android:hint="@string/mobile_number_star"
@@ -63,7 +86,7 @@
                 android:textColorHint="@color/white"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tvLoginLbl" />
+                app:layout_constraintTop_toBottomOf="@id/edtEmail" />
 
             <CheckBox
                 android:id="@+id/cbTermsConditions"
