--- a/app/src/main/res/layout/row_failed_transactions.xml
+++ b/app/src/main/res/layout/row_failed_transactions.xml
@@ -168,7 +168,6 @@
             android:layout_height="wrap_content"
             android:text="@string/remarks_"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            android:textColor="@color/black"
             app:layout_constraintBaseline_toBaselineOf="@+id/tvRemark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -180,9 +179,11 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginTop="@dimen/space_8"
+            android:fontFamily="@font/lato_semibold"
             android:maxLines="2"
             android:text="@{data.remarks}"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/tvRemarkL"
             app:layout_constraintTop_toBottomOf="@id/mDivider"
