--- a/app/src/main/res/layout/row_table_layout_content.xml
+++ b/app/src/main/res/layout/row_table_layout_content.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView android:gravity="center"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/tvTableRowContent"
-    android:layout_gravity="center"
-    android:layout_height="wrap_content"
     android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:gravity="center"
     android:padding="@dimen/space_8"
     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-    tools:text="1234546552"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" />
+    tools:text="1234546552" />
