--- a/app/src/main/res/layout/row_article_list_item.xml
+++ b/app/src/main/res/layout/row_article_list_item.xml
@@ -51,6 +51,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:ellipsize="end"
             android:fontFamily="@font/lato_semibold"
             android:maxLines="2"
             android:text="@{article.title}"
@@ -67,8 +68,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:maxLines="2"
             android:ellipsize="end"
+            android:maxLines="2"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/semi_black"
             app:HTML="@{article.description}"
