--- a/app/src/main/res/layout/fragment_kycregistration_a.xml
+++ b/app/src/main/res/layout/fragment_kycregistration_a.xml
@@ -41,11 +41,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/default_space"
-                    android:text="@string/full_name"
+                    android:text="@{vm.guardianVisibility?@string/minors_full_name:@string/full_name}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     app:layout_constraintHorizontal_weight="1"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/view2" />
+                    app:layout_constraintTop_toBottomOf="@id/view2"
+                    tools:text="@string/full_name" />
 
                 <EditText
                     android:id="@+id/edtFName"
@@ -53,18 +54,19 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/space_4"
                     android:background="@drawable/shape_edt_gray_round"
-                    android:hint="@string/enter_your_full_name"
                     android:inputType="textCapSentences"
                     android:maxLines="1"
                     android:paddingStart="@dimen/default_space"
                     android:paddingTop="@dimen/space_8"
                     android:paddingEnd="@dimen/default_space"
                     android:paddingBottom="@dimen/space_8"
+                    android:hint="@{vm.guardianVisibility?@string/enter_minors_full_name:@string/enter_your_full_name}"
                     android:text="@={kycData.fullName}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textColor="@color/black"
                     android:textColorHint="@color/darker_gray"
-                    app:layout_constraintTop_toBottomOf="@id/tvFName" />
+                    app:layout_constraintTop_toBottomOf="@id/tvFName"
+                    tools:hint="@string/enter_your_full_name" />
 
                 <TextView
                     android:id="@+id/tvPAN"
@@ -74,11 +76,13 @@
                     android:layout_marginEnd="8dp"
                     android:text="@string/pan_number"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:visibility="@{vm.guardianVisibility?View.INVISIBLE:View.VISIBLE}"
                     app:layout_constraintEnd_toStartOf="@+id/tvDOBL"
                     app:layout_constraintHorizontal_weight="1"
                     app:layout_constraintStart_toEndOf="@id/tvDOBL"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/edtFName" />
+                    app:layout_constraintTop_toBottomOf="@id/edtFName"
+                    tools:visibility="invisible" />
 
                 <EditText
                     android:id="@+id/edtPAN"
@@ -92,6 +96,7 @@
                     android:enabled="false"
                     android:hint="@string/enter_pan_name"
                     android:inputType="textCapCharacters"
+                    android:text="@{kycData.pan}"
                     android:maxLength="10"
                     android:maxLines="1"
                     android:paddingStart="@dimen/default_space"
@@ -101,10 +106,12 @@
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textColor="@color/black"
                     android:textColorHint="@color/darker_gray"
+                    android:visibility="@{vm.guardianVisibility?View.INVISIBLE:View.VISIBLE}"
                     app:layout_constraintEnd_toStartOf="@id/edtDOB"
                     app:layout_constraintHorizontal_weight="1"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tvPAN" />
+                    app:layout_constraintTop_toBottomOf="@id/tvPAN"
+                    tools:visibility="invisible" />
 
                 <TextView
                     android:id="@+id/tvDOBL"
@@ -114,16 +121,53 @@
                     android:layout_marginTop="@dimen/default_space"
                     android:text="@string/date_of_birth_"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:visibility="@{vm.guardianVisibility?View.INVISIBLE:View.VISIBLE}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_weight="1"
                     app:layout_constraintStart_toEndOf="@+id/tvPAN"
-                    app:layout_constraintTop_toBottomOf="@id/edtFName" />
+                    app:layout_constraintTop_toBottomOf="@id/edtFName"
+                    tools:visibility="invisible" />
                 <!--android:text="@={kycData.guardianDOB}"-->
                 <TextView
                     android:id="@+id/edtDOB"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/space_4"
+                    android:layout_marginTop="@dimen/space_4"
+                    android:background="@drawable/shape_edt_disable_gray_round"
+                    android:drawableEnd="@drawable/ic_calendar"
+                    android:hint="@string/select"
+                    android:maxLines="1"
+                    android:paddingStart="@dimen/default_space"
+                    android:paddingTop="@dimen/space_8"
+                    android:paddingEnd="@dimen/default_space"
+                    android:paddingBottom="@dimen/space_8"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/darker_gray"
+                    android:visibility="@{vm.guardianVisibility?View.INVISIBLE:View.VISIBLE}"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_weight="1"
+                    app:layout_constraintStart_toEndOf="@id/edtPAN"
+                    app:layout_constraintTop_toBottomOf="@id/tvDOBL"
+                    tools:visibility="invisible" />
+
+                <TextView
+                    android:id="@+id/tvGuardianDOBL"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/default_space"
+                    android:text="@string/minor_s_date_of_birth_"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:visibility="@{vm.guardianVisibility?View.VISIBLE:View.GONE}"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/edtFName" />
+                <!--android:text="@={kycData.guardianDOB}"-->
+                <TextView
+                    android:id="@+id/edtGuardianDOB"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/space_4"
                     android:background="@drawable/shape_edt_gray_round"
                     android:drawableEnd="@drawable/ic_calendar"
@@ -136,9 +180,9 @@
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textColor="@color/black"
                     android:textColorHint="@color/darker_gray"
+                    android:visibility="@{vm.guardianVisibility?View.VISIBLE:View.GONE}"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_weight="1"
-                    app:layout_constraintStart_toEndOf="@id/edtPAN"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tvDOBL" />
 
 
@@ -238,7 +282,7 @@
                     android:layout_marginEnd="@dimen/space_4"
                     android:text="@string/name_of_guardian"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                    android:visibility="@{vm.guardianVisibility}"
+                    android:visibility="@{vm.guardianVisibility?View.VISIBLE:View.GONE}"
                     app:layout_constraintEnd_toStartOf="@id/tvGuardianPAN"
                     app:layout_constraintHorizontal_weight="1"
                     app:layout_constraintStart_toStartOf="parent"
@@ -264,7 +308,7 @@
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textColor="@color/black"
                     android:textColorHint="@color/darker_gray"
-                    android:visibility="@{vm.guardianVisibility}"
+                    android:visibility="@{vm.guardianVisibility?View.VISIBLE:View.GONE}"
                     app:layout_constraintEnd_toStartOf="@id/edtGuardianPAN"
                     app:layout_constraintHorizontal_weight="1"
                     app:layout_constraintStart_toStartOf="parent"
@@ -280,7 +324,7 @@
                     android:layout_marginTop="@dimen/default_space"
                     android:text="@string/guardian_pan"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                    android:visibility="@{vm.guardianVisibility}"
+                    android:visibility="@{vm.guardianVisibility?View.VISIBLE:View.GONE}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_weight="1"
                     app:layout_constraintStart_toEndOf="@id/tvGuardian"
@@ -306,14 +350,14 @@
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textColor="@color/black"
                     android:textColorHint="@color/darker_gray"
-                    android:visibility="@{vm.guardianVisibility}"
+                    android:visibility="@{vm.guardianVisibility?View.VISIBLE:View.GONE}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_weight="1"
                     app:layout_constraintStart_toEndOf="@id/edtGuardian"
                     app:layout_constraintTop_toBottomOf="@id/tvGuardianPAN"
                     tools:visibility="gone" />
 
-                <TextView
+                <!--<TextView
                     android:id="@+id/tvCertificate"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -339,7 +383,7 @@
                     android:textOn=""
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/edtGuardian"
-                    tools:checked="true" />
+                    tools:checked="true" />-->
                 <!--<TextView
                     android:id="@+id/tvAddressTypeL"
                     android:layout_width="wrap_content"
