--- a/app/src/main/res/layout/fragment_learn_details.xml
+++ b/app/src/main/res/layout/fragment_learn_details.xml
@@ -34,9 +34,8 @@
                     android:layout_marginTop="@dimen/space_8"
                     android:layout_marginEnd="@dimen/space_8"
                     android:fontFamily="@font/lato_bold"
-                    android:maxLines="2"
                     android:text="@{article.title}"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textColor="@color/black"
                     app:layout_constraintEnd_toStartOf="@id/tvShare"
                     app:layout_constraintStart_toStartOf="parent"
