--- a/app/src/main/res/layout/fragment_tarrakki_zyaada.xml
+++ b/app/src/main/res/layout/fragment_tarrakki_zyaada.xml
@@ -276,7 +276,7 @@
                     android:padding="@dimen/_16sdp"
                     android:src="@drawable/key_benefits_1"
                     app:layout_constraintEnd_toStartOf="@id/ivB2"
-                    app:layout_constraintHorizontal_weight="3"
+                    app:layout_constraintHorizontal_weight="3.25"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/barrier2" />
 
@@ -286,6 +286,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/space_8"
                     android:gravity="center"
+                    android:paddingEnd="8dp"
                     android:text="@string/higher_returns_than_your_bank"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     app:layout_constraintEnd_toEndOf="@id/ivB1"
@@ -301,7 +302,7 @@
                     android:padding="@dimen/_16sdp"
                     android:src="@drawable/key_benefits_2"
                     app:layout_constraintEnd_toStartOf="@id/ivB3"
-                    app:layout_constraintHorizontal_weight="4"
+                    app:layout_constraintHorizontal_weight="3.5"
                     app:layout_constraintStart_toEndOf="@id/ivB1"
                     app:layout_constraintTop_toBottomOf="@id/barrier2" />
 
@@ -343,7 +344,7 @@
                     android:padding="@dimen/_16sdp"
                     android:src="@drawable/key_benefits_3"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_weight="3"
+                    app:layout_constraintHorizontal_weight="3.25"
                     app:layout_constraintStart_toEndOf="@id/ivB2"
                     app:layout_constraintTop_toBottomOf="@id/barrier2" />
 
@@ -353,11 +354,126 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/space_8"
                     android:gravity="center"
+                    android:paddingStart="8dp"
                     android:text="@string/instant_redemption_redemption"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     app:layout_constraintEnd_toEndOf="@id/ivB3"
                     app:layout_constraintStart_toStartOf="@id/ivB3"
                     app:layout_constraintTop_toBottomOf="@id/ivB3" />
+
+
+            </android.support.constraint.ConstraintLayout>
+
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/default_space"
+                android:background="@drawable/shape_cart_view"
+                android:elevation="@dimen/space_2"
+                android:orientation="vertical"
+                android:padding="8dp">
+
+                <TextView
+                    android:id="@+id/tvHReturn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/lato_semibold"
+                    android:text="@string/historical_returns"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                    android:textColor="@android:color/black"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/tvInvestmentAmountL"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/default_space"
+                    android:text="@string/investment_amount"
+                    android:textColor="@color/semi_black"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tvHReturn" />
+
+                <TextView
+                    android:id="@+id/tvInvestmentDurationL"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/default_space"
+                    android:text="@string/duration"
+                    android:textColor="@color/semi_black"
+                    app:layout_constraintStart_toEndOf="@+id/guideline7"
+                    app:layout_constraintTop_toBottomOf="@id/tvHReturn" />
+
+                <LinearLayout
+                    android:id="@+id/llContainer"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/space_8"
+                    android:layout_marginEnd="@dimen/default_space"
+                    android:background="@drawable/shape_rounded_gray"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:padding="@dimen/space_8"
+                    app:layout_constraintEnd_toStartOf="@id/guideline7"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tvInvestmentAmountL">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/space_4"
+                        android:layout_marginEnd="@dimen/space_4"
+                        android:text="@string/rs_symbol"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                        android:textColor="@color/semi_black" />
+
+                    <EditText
+                        android:id="@+id/edtInvestAmount"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@null"
+                        android:inputType="number"
+                        android:text="5,00,000"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                        android:textColor="@color/semi_black" />
+
+                </LinearLayout>
+
+                <android.support.constraint.Guideline
+                    android:id="@+id/guideline7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:visibility="visible"
+                    app:layout_constraintGuide_percent="0.48" />
+
+                <TextView
+                    android:id="@+id/tvDurations"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_marginTop="@dimen/space_8"
+                    android:background="@drawable/shape_rounded_gray"
+                    android:drawableEnd="@drawable/ic_drop_down_dark_gray_24dp"
+                    android:gravity="center"
+                    android:minWidth="@dimen/_100sdp"
+                    android:paddingStart="@dimen/default_space"
+                    android:paddingEnd="@dimen/default_space"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:textColor="@color/semi_black"
+                    app:layout_constraintBottom_toBottomOf="@id/llContainer"
+                    app:layout_constraintStart_toEndOf="@id/guideline7"
+                    app:layout_constraintTop_toBottomOf="@id/tvInvestmentDurationL"
+                    tools:text="3 Years" />
+
+                <com.github.mikephil.charting.charts.BarChart
+                    android:id="@+id/mBarChart"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_150sdp"
+                    android:layout_marginTop="@dimen/default_space"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tvDurations" />
 
 
             </android.support.constraint.ConstraintLayout>
@@ -421,10 +537,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/default_space"
-                android:autoLink="web"
-                android:linksClickable="true"
                 android:text="@string/to_know_more_about_reliance_liquid_fund_click_here"
-                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                app:hasLink="@{true}" />
 
             <Button
                 android:id="@+id/btnInvest"
